# cmake-install-rename

./: CMakeLists.txt  hello.hxx
